--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "constants/string.js"  ],
+  "exclude": ["node_modules"]
 }
